# src/main/java/com/microservice/response/BookResponse.java
@@ -13,13 +13,15 @@ public class BookResponse {
     private int numPages;
     private String isbn;
     private String plot;
+    private String[] authors;
+    private String[] genres;
     private UploadFileResponse cover;
 
     public BookResponse(Book book) {
         DBFile dbCover = book.getCover();
         UploadFileResponse coverResponse = null;
         if (dbCover != null) {
-            String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath().path("/books-ms/file/downloadFile/").path(dbCover.getId()).toUriString();
+            String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath().path("/books-ms/file/download/").path(dbCover.getId()).toUriString();
             coverResponse = new UploadFileResponse(dbCover.getFileName(), fileDownloadUri, dbCover.getFileType(), dbCover.getFSize());
         }
         
@@ -29,10 +31,10 @@ public class BookResponse {
         this.numPages = book.getNumPages();
         this.isbn = book.getIsbn();
         this.plot = book.getPlot();
+        this.authors = book.getAuthors();
+        this.genres = book.getGenres();
         this.cover = coverResponse;
     }
-
-
 
     public Long getId() {
         return id;
@@ -89,6 +91,21 @@ public class BookResponse {
     public void setCover(UploadFileResponse cover) {
         this.cover = cover;
     }
-    
-    
+
+    public String[] getAuthors() {
+        return authors;
+    }
+
+    public void setAuthors(String[] authors) {
+        this.authors = authors;
+    }
+
+    public String[] getGenres() {
+        return genres;
+    }
+
+    public void setGenres(String[] genres) {
+        this.genres = genres;
+    }
+     
 }
